kubernetes/clusters/live/config/media-prereqs/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    network-policy.homelab/profile: standard
