kubernetes/clusters/live/config/media-prereqs/network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-jellyfin-lldap
  namespace: media
spec:
  description: "Jellyfin LDAP authentication egress to LLDAP"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authelia
      toPorts:
        - ports:
            - port: "3890"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-qbittorrent-egress
  namespace: media
spec:
  # Unrestricted world egress for Gluetun VPN sidecar to establish OpenVPN tunnel
  # to NordVPN servers. The kill switch within Gluetun ensures torrent traffic only
  # flows through the VPN tunnel.
  description: "qBittorrent Gluetun VPN sidecar egress to NordVPN servers"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  egress:
    - toEntities:
        - world
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-sabnzbd-egress
  namespace: media
spec:
  description: "SABnzbd NNTPS egress to Usenet provider on port 563"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "563"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-houndarr
  namespace: media
spec:
  description: "Houndarr: ingress from istio-gateway waypoint; egress to DNS and media *arrs"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: houndarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: istio-gateway
      toPorts:
        - ports:
            - port: "8877"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
            - port: "7878"
              protocol: TCP
            - port: "9696"
              protocol: TCP
            - port: "6767"
              protocol: TCP
