kubernetes/clusters/live/config/media-prereqs/tdarr-network-policy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-tdarr-node-to-server
  namespace: media
spec:
  description: "Tdarr node egress to Tdarr server API for job coordination"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tdarr-node
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tdarr
      toPorts:
        - ports:
            - port: "8266"
              protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: media-tdarr-server-from-node
  namespace: media
spec:
  description: "Tdarr server ingress from Tdarr node for job coordination"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tdarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tdarr-node
      toPorts:
        - ports:
            - port: "8266"
              protocol: TCP
